app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-projet
  labels:
    app: rag-projet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rag-projet
  template:
    metadata:
      labels:
        app: rag-projet
    spec:
      containers:
        - name: rag-projet
          image: quay.io/neutron-it/rag-projet:latest
          securityContext:
            runAsUser: 0
          ports:
            - containerPort: 8080
          resources:
            limits:
              nvidia.com/gpu: 1
              memory: "4Gi"
              cpu: "2"
            requests:
              nvidia.com/gpu: 1
              memory: "2Gi"
              cpu: "1"
