app/04-service.yaml
# openshift/04-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rag-api-service
spec:
  selector:
    app: rag-projet
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
